--- a/font.css
+++ b/font.css
@@ -6,23 +6,25 @@
  * @license: http://yusugomori.com/license/gpl-3.0
  *
  */
+
 .css-font {
   float: left;
-  width: 22px;
+  width: 17px;
   height: 22px;
-  font-size: 22px; 
+  font-size: 20px;
 }
 
 .css-font .A {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 50%;
   width: 40%;
   height: 10%;
   margin: auto;
 }
+
 .css-font .A:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   width: 30%;
@@ -35,8 +37,9 @@
   -o-transform: skew(-20deg, 0);
   transform: skew(-20deg, 0);
 }
+
 .css-font .A:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   width: 30%;
@@ -49,14 +52,16 @@
   -o-transform: skew(20deg, 0);
   transform: skew(20deg, 0);
 }
+
 .css-font .B {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 10%;
   height: 80%;
   width: 10%;
   left: 23%;
 }
+
 .css-font .B:before {
   background-color: transparent;
   content: ' ';
@@ -70,8 +75,9 @@
   -ms-border-radius: 0 50% 50% 0;
   -o-border-radius: 0 50% 50% 0;
   border-radius: 0 50% 50% 0;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
 }
+
 .css-font .B:after {
   background-color: transparent;
   content: ' ';
@@ -85,8 +91,9 @@
   -ms-border-radius: 0 50% 50% 0;
   -o-border-radius: 0 50% 50% 0;
   border-radius: 0 50% 50% 0;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
 }
+
 .css-font .C {
   background-color: transparent;
   position: relative;
@@ -101,8 +108,9 @@
   border-radius: 50% 0 0 50%;
   border-style: solid;
   border-width: 0.1em 0 0.1em 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .D {
   background-color: transparent;
   position: relative;
@@ -115,8 +123,9 @@
   -ms-border-radius: 0 50% 50% 0;
   -o-border-radius: 0 50% 50% 0;
   border-radius: 0 50% 50% 0;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
 }
+
 .css-font .E {
   background-color: transparent;
   position: relative;
@@ -124,11 +133,12 @@
   left: 20%;
   height: 70%;
   width: 50%;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
   border-width: 0.1em 0 0 0.1em;
 }
+
 .css-font .E:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 36%;
@@ -136,8 +146,9 @@
   width: 100%;
   height: 14%;
 }
+
 .css-font .E:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   bottom: 0;
@@ -145,6 +156,7 @@
   width: 100%;
   height: 14.3%;
 }
+
 .css-font .F {
   background-color: transparent;
   position: relative;
@@ -152,11 +164,12 @@
   left: 20%;
   height: 70%;
   width: 50%;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
   border-width: 0.1em 0 0 0.1em;
 }
+
 .css-font .F:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 36%;
@@ -164,6 +177,7 @@
   width: 100%;
   height: 14%;
 }
+
 .css-font .G {
   background-color: transparent;
   position: relative;
@@ -178,10 +192,11 @@
   border-radius: 50% 0 0 50%;
   border-style: solid;
   border-width: 0.1em 0 0.1em 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .G:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   bottom: -16.5%;
@@ -189,8 +204,9 @@
   width: 20%;
   height: 60%;
 }
+
 .css-font .G:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   bottom: 38%;
@@ -198,16 +214,18 @@
   width: 60%;
   height: 18%;
 }
+
 .css-font .H {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 10%;
   left: 20%;
   width: 10%;
   height: 80%;
 }
+
 .css-font .H:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -215,8 +233,9 @@
   width: 100%;
   height: 100%;
 }
+
 .css-font .H:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 45%;
@@ -224,14 +243,16 @@
   width: 500%;
   height: 14%;
 }
+
 .css-font .I {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 10%;
   width: 10%;
   height: 80%;
   margin: 0 auto;
 }
+
 .css-font .J {
   background-color: transparent;
   position: relative;
@@ -240,8 +261,9 @@
   width: 100%;
   height: 100%;
 }
+
 .css-font .J:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 10%;
@@ -249,6 +271,7 @@
   width: 10%;
   height: 60%;
 }
+
 .css-font .J:after {
   background-color: transparent;
   content: ' ';
@@ -264,18 +287,20 @@
   border-radius: 0 0 50% 50%;
   border-style: solid;
   border-width: 0 0.1em 0.1em 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .K {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 10%;
   left: 20%;
   width: 10%;
   height: 80%;
 }
+
 .css-font .K:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -288,8 +313,9 @@
   -o-transform: skew(-45deg, 0);
   transform: skew(-45deg, 0);
 }
+
 .css-font .K:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 50%;
@@ -302,6 +328,7 @@
   -o-transform: skew(45deg, 0);
   transform: skew(45deg, 0);
 }
+
 .css-font .L {
   background-color: transparent;
   position: relative;
@@ -311,8 +338,9 @@
   height: 70%;
   border-style: solid;
   border-width: 0 0 0.1em 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .M {
   background-color: transparent;
   position: relative;
@@ -322,10 +350,11 @@
   height: 80%;
   border-style: solid;
   border-width: 0 0.1em 0 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .M:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -338,8 +367,9 @@
   -o-transform: skew(20deg, 0);
   transform: skew(20deg, 0);
 }
+
 .css-font .M:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -352,6 +382,7 @@
   -o-transform: skew(-20deg, 0);
   transform: skew(-20deg, 0);
 }
+
 .css-font .N {
   background-color: transparent;
   position: relative;
@@ -361,10 +392,11 @@
   height: 80%;
   border-style: solid;
   border-width: 0 0.1em 0 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .N:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -377,6 +409,7 @@
   -o-transform: skew(32deg, 0);
   transform: skew(32deg, 0);
 }
+
 .css-font .O {
   background-color: transparent;
   position: relative;
@@ -384,21 +417,23 @@
   left: 12%;
   width: 55%;
   height: 64%;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
 }
+
 .css-font .P {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 10%;
   height: 80%;
   width: 10%;
   left: 23%;
 }
+
 .css-font .P:before {
   background-color: transparent;
   content: ' ';
@@ -412,8 +447,9 @@
   -ms-border-radius: 0 50% 50% 0;
   -o-border-radius: 0 50% 50% 0;
   border-radius: 0 50% 50% 0;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
 }
+
 .css-font .Q {
   background-color: transparent;
   position: relative;
@@ -421,15 +457,16 @@
   left: 12%;
   width: 55%;
   height: 64%;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
 }
+
 .css-font .Q:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   bottom: -15%;
@@ -442,14 +479,16 @@
   -o-transform: skew(40deg, 0);
   transform: skew(40deg, 0);
 }
+
 .css-font .R {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 10%;
   height: 80%;
   width: 10%;
   left: 23%;
 }
+
 .css-font .R:before {
   background-color: transparent;
   content: ' ';
@@ -463,10 +502,11 @@
   -ms-border-radius: 0 50% 50% 0;
   -o-border-radius: 0 50% 50% 0;
   border-radius: 0 50% 50% 0;
-  border: solid 0.1em #000000;
+  border: solid 0.1em #f3cd44;
 }
+
 .css-font .R:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   bottom: 0;
@@ -479,6 +519,7 @@
   -o-transform: skew(45deg, 0);
   transform: skew(45deg, 0);
 }
+
 .css-font .S {
   background-color: transparent;
   position: relative;
@@ -493,10 +534,11 @@
   border-radius: 50% 50% 0 0;
   border-style: solid;
   border-width: 0.1em 0.1em 0 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .S:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 98%;
@@ -514,6 +556,7 @@
   -o-border-radius: 50% 0 50% 0;
   border-radius: 50% 0 50% 0;
 }
+
 .css-font .S:after {
   background-color: transparent;
   content: ' ';
@@ -529,18 +572,20 @@
   border-radius: 0 0 50% 50%;
   border-style: solid;
   border-width: 0 0.1em 0.1em 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .T {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 10%;
   left: 15%;
   width: 70%;
   height: 10%;
 }
+
 .css-font .T:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -549,6 +594,7 @@
   height: 800%;
   margin: 0 auto;
 }
+
 .css-font .U {
   background-color: transparent;
   position: relative;
@@ -558,8 +604,9 @@
   height: 60%;
   border-style: solid;
   border-width: 0 0.1em 0 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .U:before {
   background-color: transparent;
   content: ' ';
@@ -575,8 +622,9 @@
   border-radius: 0 0 50% 50%;
   border-style: solid;
   border-width: 0 0.1em 0.1em 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .V {
   background-color: transparent;
   position: relative;
@@ -585,8 +633,9 @@
   width: 100%;
   height: 80%;
 }
+
 .css-font .V:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -599,8 +648,9 @@
   -o-transform: skew(20deg, 0);
   transform: skew(20deg, 0);
 }
+
 .css-font .V:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -613,6 +663,7 @@
   -o-transform: skew(-20deg, 0);
   transform: skew(-20deg, 0);
 }
+
 .css-font .W {
   background-color: transparent;
   position: relative;
@@ -621,6 +672,7 @@
   width: 100%;
   height: 80%;
 }
+
 .css-font .W:before {
   background-color: transparent;
   content: ' ';
@@ -631,13 +683,14 @@
   height: 100%;
   border-style: solid;
   border-width: 0 0.1em 0 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
   -webkit-transform: skew(14deg, 0);
   -moz-transform: skew(14deg, 0);
   -ms-transform: skew(14deg, 0);
   -o-transform: skew(14deg, 0);
   transform: skew(14deg, 0);
 }
+
 .css-font .W:after {
   background-color: transparent;
   content: ' ';
@@ -648,13 +701,14 @@
   height: 100%;
   border-style: solid;
   border-width: 0 0.1em 0 0.1em;
-  border-color: #000000;
+  border-color: #f3cd44;
   -webkit-transform: skew(-14deg, 0);
   -moz-transform: skew(-14deg, 0);
   -ms-transform: skew(-14deg, 0);
   -o-transform: skew(-14deg, 0);
   transform: skew(-14deg, 0);
 }
+
 .css-font .X {
   background-color: transparent;
   position: relative;
@@ -663,8 +717,9 @@
   width: 100%;
   height: 80%;
 }
+
 .css-font .X:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -677,8 +732,9 @@
   -o-transform: skew(36deg, 0);
   transform: skew(36deg, 0);
 }
+
 .css-font .X:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
@@ -691,16 +747,18 @@
   -o-transform: skew(-36deg, 0);
   transform: skew(-36deg, 0);
 }
+
 .css-font .Y {
-  background-color: #000000;
+  background-color: #f3cd44;
   position: relative;
   top: 50%;
   width: 10%;
   height: 40%;
   margin: 0 auto;
 }
+
 .css-font .Y:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: -100%;
@@ -713,8 +771,9 @@
   -o-transform: skew(36deg, 0);
   transform: skew(36deg, 0);
 }
+
 .css-font .Y:after {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: -100%;
@@ -727,6 +786,7 @@
   -o-transform: skew(-36deg, 0);
   transform: skew(-36deg, 0);
 }
+
 .css-font .Z {
   background-color: transparent;
   position: relative;
@@ -736,10 +796,11 @@
   height: 60%;
   border-style: solid;
   border-width: 0.1em 0 0.1em 0;
-  border-color: #000000;
+  border-color: #f3cd44;
 }
+
 .css-font .Z:before {
-  background-color: #000000;
+  background-color: #f3cd44;
   content: ' ';
   position: absolute;
   top: 0;
