--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
       background: #ba6416;
 }
 
-.ilumination {      
+.ilumination {
       position: absolute;
       top: 25px;
       left: 25px;
@@ -605,10 +605,10 @@ body {
 }
 
 .circular-16 {
-      top: 7.7em;
-      left: 7.7em;
-      width: 206px;
-      height: 204px;
+      top: 7.65em;
+      left: 7.65em;
+      width: 208px;
+      height: 208px;
       z-index: 16;
 }
 
@@ -622,7 +622,8 @@ body {
       left: 0;
       z-index: -1;
       margin: 1.5px 1.5px;
-      background-image: linear-gradient(-20deg, #8a430f 15%, #c46b17 50%, #8a430f 86%);
+    /*  background-image: linear-gradient(-20deg, #8a430f 15%, #c46b17 50%, #8a430f 86%);*/
+      background: #ba6416;
 }
 
 .horizontal-back {
@@ -632,8 +633,9 @@ body {
       width: 450px;
       height: 450px;
       z-index: 17;
-      background-image: linear-gradient(-20deg, #ba6416 15%, #bc6615 50%, #8a430f 86%);
-      clip-path: polygon(99% 43%, 89% 43%, 89% 41%, 87% 40%, 77% 54%, 77% 46%, 73% 35%, 62% 25%, 55% 24%, 53% 27%, 47% 27%, 42% 25%, 36% 28%, 27% 43%, 20% 49%, 17% 54%, 18.5% 60%, 29% 66%, 33% 73%, 43% 78%, 42% 72%, 57% 78%, 59% 77%, 69% 71%, 76% 62%, 79% 72%, 82% 72%, 86% 66%, 97% 66%);
+    /*  background-image: linear-gradient(-20deg, #ba6416 15%, #bc6615 50%, #8a430f 86%);*/
+      background: #ba6416;
+      clip-path: polygon(99% 43%, 89% 43%, 89% 41%, 87% 40%, 77% 54%, 77% 46%, 73% 35%, 68% 30%, 63% 26%, 56% 23%, 53% 28%, 47% 28%, 41% 25%, 36% 28%, 27% 43%, 20% 49%, 17% 54%, 18.5% 60%, 31% 67%, 29% 73%, 42% 80%, 47% 75%, 50% 75%, 56% 78%, 59% 77%, 69% 71%, 76% 62%, 79% 72%, 82% 72%, 86% 66%, 97% 66%);
 }
 
 .horizontal-top {
@@ -868,6 +870,17 @@ body {
       background: #f3cd44;
 }
 
+.horizontal-top-x {
+      top: 295px;
+      left: 211px;
+      width: 3px;
+      height: 3px;
+      z-index: 24;
+      border: 0;
+      border-radius: 50%;
+      background: #f3cd44;
+}
+
 .horizontal-top-a1 {
       top: 282px;
       left: 224px;
@@ -975,7 +988,7 @@ body {
       height: 30px;
       transform: skewY(46deg);
       border-right: 2px solid #f3cd44;
-      background: #8d450f;
+      background: #ba6416;
 }
 
 .horizontal-top-a12 {
@@ -984,7 +997,7 @@ body {
       width: 4px;
       height: 30px;
       transform: skewY(46deg);
-      background: #8d450f;
+      background: #ba6416;
 }
 
 .horizontal-top-a13 {
@@ -994,7 +1007,7 @@ body {
       height: 16px;
       transform: skewY(-46deg);
       border-right: 2px solid #f3cd44;
-      background: #8d450f;
+      background: #ba6416;
 }
 
 .horizontal-top-a14 {
@@ -1004,7 +1017,7 @@ body {
       height: 21px;
       transform: skewY(-46deg);
       border-right: 2px solid #f3cd44;
-      background: #8d450f;
+      background: #ba6416;
       border-left: 0;
 }
 
@@ -1016,7 +1029,7 @@ body {
       transform: skewY(-5deg);
       border-right: 0;
       border-left: 0;
-      background: #8d450f;
+      background: #ba6416;
       border-left: 0;
       border: 0;
 }
@@ -1036,9 +1049,7 @@ body {
       left: 218px;
       width: 10px;
       height: 22px;
-      /* border: 2px solid #f3cd44; */
       border-bottom: 0;
-      /* border-radius: 3px 3px 0 0; */
 }
 
 .horizontal-top-a18 {
@@ -1060,6 +1071,232 @@ body {
       left: 201px;
       width: 10px;
       height: 1px;
+}
+
+.horizontal-top-a21 {
+      top: 107px;
+      left: 263px;
+      width: 3px;
+      border: 0;
+      height: 27px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+      transform: skewY(17deg);
+}
+
+.horizontal-top-a22 {
+      top: 118px;
+      left: 257px;
+      width: 4px;
+      border: 0;
+      height: 4px;
+      border-bottom: 1px solid #f3cd44;
+      border-top: 1px solid #f3cd44;
+}
+
+.horizontal-top-a23 {
+      top: 169px;
+      left: 148px;
+      width: 4px;
+      border: 0;
+      height: 34px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+}
+
+.horizontal-top-a24 {
+      top: 221px;
+      left: 133px;
+      width: 7px;
+      border: 0;
+      height: 64px;
+      border-right: 2px solid #f3cd44;
+      border-left: 2px solid #f3cd44;
+}
+
+.horizontal-top-a25 {
+      top: 286px;
+      left: 149px;
+      width: 4px;
+      border: 0;
+      height: 3px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+}
+
+.horizontal-top-a26 {
+      top: 333px;
+      left: 135px;
+      width: 34px;
+      border: 0;
+      height: 21px;
+      border-right: 1px solid #f3cd44;
+      border-top: 1px solid #f3cd44;
+}
+
+.horizontal-top-a27 {
+      top: 338px;
+      left: 162px;
+      width: 18px;
+      border: 0;
+      height: 14px;
+      transform: skewX(60deg);
+      border-top: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+}
+
+.horizontal-top-a28 {
+      top: 335px;
+      left: 172px;
+      width: 4px;
+      border: 0;
+      height: 15px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+}
+
+.horizontal-top-a29 {
+      top: 368px;
+      left: 189px;
+      width: 6px;
+      border: 0;
+      height: 16px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+      transform: skewY(48deg);
+      background: #ba6416;
+}
+
+.horizontal-top-a30 {
+      top: 368px;
+      left: 195px;
+      width: 6px;
+      border: 0;
+      height: 22px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+      transform: skewY(48deg);
+      background: #ba6416;
+}
+
+.horizontal-top-a31 {
+      top: 371px;
+      left: 202px;
+      width: 5px;
+      border: 0;
+      height: 22px;
+      background: #ba6416;
+      border-right: 1px solid #f3cd44;
+      transform: skewY(15deg);
+}
+
+.horizontal-top-a32 {
+      top: 370px;
+      left: 209px;
+      width: 23px;
+      height: 22px;
+      border-right: 0;
+      border-left: 0;
+      background: #ba6416;
+      border-left: 0;
+      border: 0;
+}
+
+.horizontal-top-a33 {
+      top: 374px;
+      left: 217px;
+      width: 5px;
+      border: 0;
+      height: 22px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+      background: #ba6416;
+}
+
+.horizontal-top-a34 {
+      top: 369px;
+      left: 232px;
+      width: 6px;
+      border: 0;
+      height: 23px;
+      border-left: 1px solid #f3cd44;
+      transform: skewY(-48deg);
+      background: #ba6416;
+}
+
+.horizontal-top-a35 {
+      top: 368px;
+      left: 239px;
+      width: 6px;
+      border: 0;
+      height: 17px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+      transform: skewY(-48deg);
+      background: #ba6416;
+}
+
+.horizontal-top-a36 {
+      top: 377px;
+      left: 208px;
+      width: 6px;
+      border: 0;
+      height: 5px;
+      border-bottom: 1px solid #f3cd44;
+      border-top: 1px solid #f3cd44;
+}
+
+.horizontal-top-a37 {
+      top: 388px;
+      left: 208px;
+      width: 6px;
+      border: 0;
+      height: 5px;
+      border-bottom: 1px solid #f3cd44;
+      border-top: 1px solid #f3cd44;
+}
+
+.horizontal-top-a38 {
+      top: 333px;
+      left: 261px;
+      width: 4px;
+      border: 0;
+      height: 13px;
+      border-right: 1px solid #f3cd44;
+      border-left: 1px solid #f3cd44;
+      background: #ba6416;
+}
+
+
+.horizontal-top-a39 {
+      top: 337px;
+    left: 269px;
+    width: 13px;
+    border: 0;
+    height: 1px;
+    border-bottom: 1px solid #f3cd44;
+    background: #ba6416;
+}
+
+.horizontal-top-a40 {
+      top: 198px;
+      left: 328px;
+      width: 1px;
+      border: 0;
+      height: 25px;
+      border-right: 1px solid #f3cd44;
+      background: #ba6416;
+}
+
+.horizontal-top-a41 {
+      top: 183px;
+      left: 332px;
+      width: 1px;
+      border: 0;
+      height: 7px;
+      border-right: 1px solid #f3cd44;
+      background: #ba6416;
+      transform: skewX(25deg);
 }
 
 .horizontal-top-1 {
@@ -1753,8 +1990,8 @@ body {
 }
 
 .rectangles span:nth-of-type(48) {
-      width: 10px;
-      height: 8px;
+      width: 11px;
+      height: 9px;
       top: 116px;
       left: 260px;
       z-index: 29;
@@ -1913,18 +2150,18 @@ body {
 }
 
 .rectangles span:nth-of-type(67) {
-      width: 8px;
+      width: 9px;
       height: 8px;
       top: 336px;
-      left: 172px;
+      left: 171px;
       z-index: 29;
 }
 
 .rectangles span:nth-of-type(68) {
-      width: 8px;
+      width: 9px;
       height: 8px;
       top: 346px;
-      left: 172px;
+      left: 171px;
       z-index: 29;
 }
 
